--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "angular.beta malo vise 15",
   "author": "beliYu",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/beliyu/Wiki02.git"
+  },
   "dependencies": {
     "angular2": "2.0.0-beta.17",
     "bootstrap": "^3.3.6",
